--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ ul li a {
     text-decoration: none;
     font-weight: 600;
     font-size: 16px;
+    color: #A001FF;
 }
 .button{
     text-decoration: none;
