--- a/style.css
+++ b/style.css
@@ -130,3 +130,8 @@ h2{
 }
 /* =========/about me section========= */
 
+/* =========expertise section========= */
+
+
+/* =========/expertise section========= */
+
