--- a/style.css
+++ b/style.css
@@ -120,7 +120,8 @@ h2{
 /* =========/hero section========= */
 /* =========about me section========= */
 .aboutMe{
-    margin-top: 110px;
+    margin-top: ;
+    background-color: rgb(248, 248, 248);
 }
 .imgTwo{
     width: 100%;
@@ -131,7 +132,55 @@ h2{
 /* =========/about me section========= */
 
 /* =========expertise section========= */
+.expertise{
+    margin: 100px 0;
+}
+.text-section{
+    width: 50%;
+    padding: 50px;
+}
+.text-section h1 {
+    margin-bottom: 10px;
+}
+#expert{
+    text-align: center;
+}
+#expert-line{
+    margin: 10px auto 30px;
+}
+h2{
+    font-weight: 600;
+}
+.progress-section{
+    width: 50%;
+    padding: 50px;
+}
+.progress{
+    width: 100%;
+    height: 20px;
+    background-color: #a201ff67;
+}
+.progress-fill{
+    width: 60%;
+    height: 20px;
+    background-color: #A001FF;
+    margin: 15px 0;
 
+}
+.lang{
+    margin-bottom: 40px;
+    color: #CF00FF;
+}
+#css{
+    width: 70%;
+    height: 20px;
+    background-color: #A001FF;
+}
+#js{
+    width: 50%;
+    height: 20px;
+    background-color: #A001FF;
+}
 
 /* =========/expertise section========= */
 
