contact section added

--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ h2{
 }
 #expert{
     text-align: center;
+    
 }
 #expert-line{
     margin: 10px auto 30px;
@@ -183,4 +184,47 @@ h2{
 }
 
 /* =========/expertise section========= */
+
+/* =========Contact section========= */
+
+.contact{
+    background-color: rgb(243, 243, 243);
+    margin: 100px 0;
+}
+.contact-box{
+    width: 100%;
+    height: 80%;
+    background-color: white;
+    margin: 100px auto;
+    
+}
+.adress{
+    width: 50%;
+    background-color: #CF00FF;
+}
+.address-text{
+    padding: 70px 50px;
+    color: white;
+}
+.form{
+    width: 50%;
+    padding: 50px;
+}
+.input-item{
+    width: 100%;
+    margin: 20px 0 20px;
+    border: none;
+    border-bottom: 2px solid rgb(175, 175, 175);
+}
+#contact-buton{
+    width: 100%;
+    border-radius: 0%;
+    background-color: #CF00FF;
+}
+#getInTouch{
+    margin-top: 200px;
+    text-align: center;
+}
+
+/* =========/Contact section========= */
 
